--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "price_1MotwRLkdIwHu7ixYcPLm5uZ",
         "quickgpt",
         "Vnugnzdur",
+        "whsec_N75Cgphn9JjBfkUHXec1rbRTlhxU2pZN",
         "zben"
     ]
 }
